Set debug to False by default

--- a/templates/conf.yaml.j2
+++ b/templates/conf.yaml.j2
@@ -2,7 +2,7 @@
 SECRET_KEY: '{{ adjutant_secret_key }}'
 
 # SECURITY WARNING: don't run with debug turned on in production!
-DEBUG: True
+DEBUG: False
 ALLOWED_HOSTS:
     - "*"
 
