--- a/templates/conf.yaml.j2
+++ b/templates/conf.yaml.j2
@@ -72,7 +72,7 @@ HORIZON_URL: {{ adjutant_horizon_publicurl }}
 TOKEN_EXPIRE_TIME: 24
 
 ACTIVE_TASKVIEWS:
-{{ adjutant_active_taskviews | to_nice_yaml(width=140) }}
+{{ adjutant_active_taskviews | to_nice_yaml(width=140) | indent(2, True) }}
 
 DEFAULT_TASK_SETTINGS:
   emails:
@@ -329,18 +329,18 @@ TASK_SETTINGS:
 
 # mapping between roles and managable roles
 ROLES_MAPPING:
-{{ adjutant_role_mapping | to_nice_yaml(width=140) }}
+{{ adjutant_role_mapping | to_nice_yaml(width=140) | indent(2, True) }}
 
 PROJECT_QUOTA_SIZES:
-{{ adjutant_quota_sizes | to_nice_yaml(width=140) }}
+{{ adjutant_quota_sizes | to_nice_yaml(width=140) | indent(2, True) }}
 
 # Time in seconds to cache token from Keystone
 TOKEN_CACHE_TIME: 0
 
 # Ordered list of quota sizes from smallest to biggest
 QUOTA_SIZES_ASC:
-{{ adjutant_quota_sizes_asc | to_nice_yaml(width=140) }}
+{{ adjutant_quota_sizes_asc | to_nice_yaml(width=140) | indent(2, True) }}
 
 # Services to check through the quotas for
 QUOTA_SERVICES:
-{{ adjutant_quota_services | to_nice_yaml(width=140) }}
+{{ adjutant_quota_services | to_nice_yaml(width=140) | indent(2, True) }}
