Use proper galera port in configuration
While <servuce>_galera_port is defined and used for db_setup
role, it's not in fact used in a connection string for oslo.db.

Change-Id: I7979259bee2ec022299bc214ec3eb1634f796ece

--- a/templates/adjutant.yaml.j2
+++ b/templates/adjutant.yaml.j2
@@ -12,6 +12,7 @@ django:
       NAME: '{{ adjutant_galera_database }}'
       PASSWORD: '{{ adjutant_galera_password }}'
       USER: '{{ adjutant_galera_user }}'
+      PORT: '{{ adjutant_galera_port }}'
   logging:
     version: 1
     disable_existing_loggers: False
