--- a/templates/wsgi.py.j2
+++ b/templates/wsgi.py.j2
@@ -25,9 +25,9 @@ from django.core.wsgi import get_wsgi_application
 
 from keystonemiddleware.auth_token import AuthProtocol
 
-from adjutant.config import CONF
+from envoy_translator.config import CONF
 
-os.environ.setdefault("DJANGO_SETTINGS_MODULE", "adjutant.settings")
+os.environ.setdefault("DJANGO_SETTINGS_MODULE", "envoy_translator.settings")
 
 
 application = get_wsgi_application()
